--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="site.png" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Page</title>
+  <title>Mais acessibilidade</title>
   <link rel="stylesheet" href="stylee.css">
 
   <!-- Scroll suave -->
@@ -140,4 +140,5 @@ Nesse sentido, a acessibilidade não deve ser vista apenas como adaptação fís
 
 
 </body>
+
 </html>
