--- a/index.html
+++ b/index.html
@@ -83,9 +83,13 @@ Nesse sentido, a acessibilidade não deve ser vista apenas como adaptação fís
     <div class="container">
       <h2>BAIXA VISÃO</h2>
       <pre>
-        <div class="tit"> 
-      
-      </pre>
+      <p>  
+        A cegueira e a baixa visão fazem parte da deficiência visual, que é a perda parcial ou total da capacidade de enxergar, mesmo quando a pessoa usa óculos ou faz algum tipo de tratamento. A cegueira acontece quando a pessoa não enxerga ou enxerga quase nada, sendo necessário utilizar outros sentidos, como o tato e a audição, para se orientar e aprender. Já a baixa visão ocorre quando a pessoa ainda consegue enxergar um pouco, mas não o suficiente para realizar atividades do dia a dia sem ajuda de recursos especiais, como letras ampliadas ou lupas (Jacob, 2017).
+        A baixa visão pode causar dificuldades para enxergar detalhes, ler textos pequenos, identificar objetos à distância ou perceber bem o ambiente ao redor. Mesmo com algum resíduo visual, a pessoa enfrenta limitações que podem atrapalhar sua autonomia e seu aprendizado na escola, o que torna importante o uso de adaptações e recursos de acessibilidade (Magalhães, 2016).
+        Segundo os autores estudados, a cegueira e a baixa visão podem ser causadas por vários fatores. Entre os principais estão doenças nos olhos, como catarata, glaucoma e problemas na retina. Além disso, essas condições também podem ser congênitas, ou seja, presentes desde o nascimento, ou adquiridas ao longo da vida por causa de infecções, acidentes, traumas ou falta de acesso a diagnóstico e tratamento adequados (Anjos, 2016).
+       Os documentos destacam ainda que muitas dessas causas poderiam ser prevenidas com acompanhamento médico e cuidados com a saúde visual. Quando isso não acontece, a deficiência visual pode dificultar o processo de aprendizagem e a participação social, tornando essencial que a escola esteja preparada para oferecer inclusão, acessibilidade e igualdade de oportunidades para todos os alunos (Coelho, 2018).</p></pre>
+      <pre><div class="tit"></div></pre> 
+    
     </div>
   </section>
 
@@ -142,4 +146,5 @@ Nesse sentido, a acessibilidade não deve ser vista apenas como adaptação fís
 </body>
 
 </html>
+
 
