--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,73 +7,127 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acessibilidade e Tecnologia - PcD</title>
   <link rel="stylesheet" href="stylee.css">
+
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
+    /* Centraliza todo o conteúdo e melhora a legibilidade */
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      text-align: center;
+    }
+
+    /* Ajuste de tipografia para acessibilidade */
+    body {
+      line-height: 1.6; /* Melhor espaçamento para leitura */
+      font-family: Arial, sans-serif;
+    }
+
+    h1, h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    /* Estilização dos parágrafos para substituir o <pre> */
+    .texto-secao {
+      text-align: justify;
+      margin-bottom: 1.5em;
+      font-size: 1.1rem;
+    }
+
+    .manual-imagens img {
+      width: 80%; /* Aumentado para melhor visualização */
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    footer {
+      background-color: #f4f4f4;
+      padding: 20px 0;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
 
   <header>
-    <nav class="sidebar-menu" aria-label="Menu de navegação">
-      <div class="menu-header">MENU</div>
-      <a href="#inicio">Início</a>
-      <a href="#baixa-visao">Baixa visão</a>
-      <a href="#manual">Manual</a>
-      <button onclick="lerSite()" class="btn-leitura">🔊 Ouvir Texto</button>
-      <button onclick="pararLeitura()" class="btn-parar" style="display:none;" id="btnParar">Stop</button>
-    </nav>
+   <nav class="sidebar-menu" aria-label="Menu de navegação">
+  <div class="menu-header">MENU</div>
+  <a href="#inicio">Início</a>
+  <a href="#baixa-visao">Baixa visão</a>
+  <a href="#manual">Manual</a>
+  <button onclick="lerSite()" class="btn-leitura">🔊 Ouvir Texto</button>
+</nav>
   </header>
 
-  <main>
-    <section id="inicio" class="content">
-      <div class="container">
-        <hr>
-        <h1>COMO A TECNOLOGIA TEM INFLUENCIADO NA VIDA DAS PESSOAS COM DEFICIÊNCIAS - PCD</h1>
-        <hr>
-        <br>
-        <div class="texto-secao">
-          <p>A acessibilidade para pessoas com baixa visão é um tema muito importante no contexto educacional, pois está diretamente ligada ao direito à educação e à inclusão escolar. Estudantes com baixa visão enfrentam diversas dificuldades no ambiente escolar, principalmente quando não existem adaptações adequadas nos materiais didáticos, na estrutura física da escola e nas práticas de ensino. Dessa forma, garantir acessibilidade significa oferecer condições para que esses alunos possam aprender, participar das atividades e permanecer na escola com qualidade.</p>
-          <p>Apesar dos avanços na inclusão de estudantes com deficiência nas instituições de ensino, ainda existem muitos desafios que dificultam a vivência escolar de alunos com baixa visão. A falta de recursos acessíveis, como materiais ampliados, tecnologias assistivas e metodologias adequadas, pode prejudicar o processo de aprendizagem e desmotivar o estudante. Além disso, a ausência de preparo da escola e dos profissionais da educação pode reforçar barreiras que vão além das limitações visuais.</p>
-          <p>Nesse sentido, a acessibilidade não deve ser vista apenas como adaptação física, mas também como uma prática pedagógica inclusiva. É fundamental que a escola esteja preparada para atender às necessidades dos estudantes com baixa visão, promovendo um ambiente acolhedor, respeitoso e que valorize as diferenças. A inclusão acontece quando todos têm oportunidades iguais de aprendizado e participação.</p>
-          <p>Diante disso, este trabalho tem como objetivo discutir a importância da acessibilidade para pessoas com baixa visão no ambiente escolar, destacando como ela influencia a inclusão e a permanência dos estudantes na escola. Assim, busca-se refletir sobre a necessidade de uma educação mais justa, inclusiva e acessível para todos.</p>
-          <p>A tecnologia tem exercido um papel fundamental na promoção da inclusão e na melhoria da qualidade de vida das pessoas com deficiência. Quando desenvolvida com foco na acessibilidade, ela possibilita mais autonomia, participação social e acesso à informação, reduzindo barreiras que antes dificultavam a interação com sistemas e serviços digitais.</p>
-          <p>A acessibilidade, acima de tudo, é um direito que garante igualdade de oportunidades, respeito às diferenças e dignidade para todos. No ambiente digital, isso significa criar ferramentas que possam ser utilizadas por qualquer pessoa, independentemente de suas limitações visuais, físicas ou cognitivas. Nesse contexto, este site foi desenvolvido com o objetivo de demonstrar como a tecnologia pode ser uma aliada da inclusão.</p>
-          <p>Como parte dessa proposta, é apresentado um manual de acessibilidade do SUAP, voltado especialmente para pessoas com baixa visão, oferecendo orientações práticas para facilitar a navegação, melhorar a leitura e tornar o uso do sistema mais acessível e eficiente.</p>
-        </div>
-      </div>
-    </section>
+  <section id="inicio" class="content">
+    <div class="container">
+      <hr>
+      <h1>COMO A TECNOLOGIA TEM INFLUENCIADO NA VIDA DAS PESSOAS COM DEFICIÊNCIAS - PCD</h1>
+      <hr>
+      <br>
+      
+      <div class="texto-secao">
+        <p>A acessibilidade para pessoas com baixa visão é um tema muito importante no contexto educacional, pois está diretamente ligada ao direito à educação e à inclusão escolar. Estudantes com baixa visão enfrentam diversas dificuldades no ambiente escolar, principalmente quando não existem adaptações adequadas nos materiais didáticos, na estrutura física da escola e nas práticas de ensino. Dessa forma, garantir acessibilidade significa oferecer condições para que esses alunos possam aprender, participar das atividades e permanecer na escola com qualidade.</p>
+        
+        <p>Apesar dos avanços na inclusão de estudantes com deficiência nas instituições de ensino, ainda existem muitos desafios que dificultam a vivência escolar de alunos com baixa visão. A falta de recursos acessíveis, como materiais ampliados, tecnologias assistivas e metodologias adequadas, pode prejudicar o processo de aprendizagem e desmotivar o estudante. Além disso, a ausência de preparo da escola e dos profissionais da educação pode reforçar barreiras que vão além das limitações visuais.</p>
 
-    <section id="baixa-visao" class="content">
-      <div class="container">
-        <h2>BAIXA VISÃO</h2>
-        <div class="texto-secao">
-          <p>A cegueira e a baixa visão fazem parte da deficiência visual, que é a perda parcial ou total da capacidade de enxergar, mesmo quando a pessoa usa óculos ou faz algum tipo de tratamento. A cegueira acontece quando a pessoa não enxerga ou enxerga quase nada, sendo necessário utilizar outros sentidos, como o tato e a audição, para se orientar e aprender. Já a baixa visão ocorre quando a pessoa ainda consegue enxergar um pouco, mas não o suficiente para realizar atividades do dia a dia sem ajuda de recursos especiais, como letras ampliadas ou lupas (Jacob, 2017).</p>
-          <p>A baixa visão pode causar dificuldades para enxergar detalhes, ler textos pequenos, identificar objetos à distância ou perceber bem o ambiente ao redor. Mesmo com algum resíduo visual, a pessoa enfrenta limitações que podem atrapalhar sua autonomia e seu aprendizado na escola, o que torna importante o uso de adaptações e recursos de acessibilidade (Magalhães, 2016).</p>
-          <p>Segundo os autores estudados, a cegueira e a baixa visão podem ser causadas por vários fatores. Entre os principais estão doenças nos olhos, como catarata, glaucoma e problemas na retina. Além disso, essas condições também podem ser congênitas, ou seja, presentes desde o nascimento, ou adquiridas ao longo da vida por causa de infecções, acidentes, traumas ou falta de acesso a diagnóstico e tratamento adequados (Anjos, 2016).</p>
-          <p>Os documentos destacam ainda que muitas dessas causas poderiam ser prevenidas com acompanhamento médico e cuidados com a saúde visual. Quando isso não acontece, a deficiência visual pode dificultar o processo de aprendizagem e a participação social, tornando essencial que a escola esteja preparada para oferecer inclusão, acessibilidade e igualdade de oportunidades para todos os alunos (Coelho, 2018).</p>
-        </div>
-      </div>
-    </section>
+        <p>Nesse sentido, a acessibilidade não deve ser vista apenas como adaptação física, mas também como uma prática pedagógica inclusiva. É fundamental que a escola esteja preparada para atender às necessidades dos estudantes com baixa visão, promovendo um ambiente acolhedor, respeitoso e que valorize as diferenças. A inclusão acontece quando todos têm oportunidades iguais de aprendizado e participação.</p>
 
-    <section id="manual" class="content">
-      <div class="container">
-        <h2>MANUAL</h2>
-        <div class="manual-imagens">
-          <img src="MANUAL CAPA.png" alt="Capa do Manual de Acessibilidade">
-          <img src="MANUAL ROST.png" alt="Folha de Rosto">
-          <img src="SUMARIO.png" alt="Sumário">
-          <img src="P1.png" alt="Página 1">
-          <img src="P2.png" alt="Página 2">
-          <img src="P3.png" alt="Página 3">
-          <img src="P4.png" alt="Página 4">
-          <img src="P5.png" alt="Página 5">
-          <img src="P6.png" alt="Página 6">
-          <img src="P7.png" alt="Página 7">
-          <img src="P8.png" alt="Página 8">
-          <img src="P9.png" alt="Página 9">
-          <img src="P10.png" alt="Página 10">
-          <img src="P11.png" alt="Página 11">
-        </div>
+        <p>Diante disso, este trabalho tem como objetivo discutir a importância da acessibilidade para pessoas com baixa visão no ambiente escolar, destacando como ela influencia a inclusão e a permanência dos estudantes na escola. Assim, busca-se refletir sobre a necessidade de uma educação mais justa, inclusiva e acessível para todos.</p>
+
+        <p>A tecnologia tem exercido um papel fundamental na promoção da inclusão e na melhoria da qualidade de vida das pessoas com deficiência. Quando desenvolvida com foco na acessibilidade, ela possibilita mais autonomia, participação social e acesso à informação, reduzindo barreiras que antes dificultavam a interação com sistemas e serviços digitais.</p>
+
+        <p>A acessibilidade, acima de tudo, é um direito que garante igualdade de oportunidades, respeito às diferenças e dignidade para todos. No ambiente digital, isso significa criar ferramentas que possam ser utilizadas por qualquer pessoa, independentemente de suas limitações visuais, físicas ou cognitivas. Nesse contexto, este site foi desenvolvido com o objetivo de demonstrar como a tecnologia pode ser uma aliada da inclusão.</p>
+
+        <p>Como parte dessa proposta, é apresentado um manual de acessibilidade do SUAP, voltado especialmente para pessoas com baixa visão, oferecendo orientações práticas para facilitar a navegação, melhorar a leitura e tornar o uso do sistema mais acessível e eficiente.</p>
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
+
+  <section id="baixa-visao" class="content">
+    <div class="container">
+      <h2>BAIXA VISÃO</h2>
+      <div class="texto-secao">
+        <p>A cegueira e a baixa visão fazem parte da deficiência visual, que é a perda parcial ou total da capacidade de enxergar, mesmo quando a pessoa usa óculos ou faz algum tipo de tratamento. A cegueira acontece quando a pessoa não enxerga ou enxerga quase nada, sendo necessário utilizar outros sentidos, como o tato e a audição, para se orientar e aprender. Já a baixa visão ocorre quando a pessoa ainda consegue enxergar um pouco, mas não o suficiente para realizar atividades do dia a dia sem ajuda de recursos especiais, como letras ampliadas ou lupas (Jacob, 2017).</p>
+
+        <p>A baixa visão pode causar dificuldades para enxergar detalhes, ler textos pequenos, identificar objetos à distância ou perceber bem o ambiente ao redor. Mesmo com algum resíduo visual, a pessoa enfrenta limitações que podem atrapalhar sua autonomia e seu aprendizado na escola, o que torna importante o uso de adaptações e recursos de acessibilidade (Magalhães, 2016).</p>
+
+        <p>Segundo os autores estudados, a cegueira e a baixa visão podem ser causadas por vários fatores. Entre os principais estão doenças nos olhos, como catarata, glaucoma e problemas na retina. Além disso, essas condições também podem ser congênitas, ou seja, presentes desde o nascimento, ou adquiridas ao longo da vida por causa de infecções, acidentes, traumas ou falta de acesso a diagnóstico e tratamento adequados (Anjos, 2016).</p>
+
+        <p>Os documentos destacam ainda que muitas dessas causas poderiam ser prevenidas com acompanhamento médico e cuidados com a saúde visual. Quando isso não acontece, a deficiência visual pode dificultar o processo de aprendizagem e a participação social, tornando essencial que a escola esteja preparada para oferecer inclusão, acessibilidade e igualdade de oportunidades para todos os alunos (Coelho, 2018).</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="manual" class="content">
+    <div class="container">
+      <h2>MANUAL</h2>
+      <div class="manual-imagens">
+        <img src="MANUAL CAPA.png" alt="Capa do Manual de Acessibilidade">
+        <img src="MANUAL ROST.png" alt="Folha de Rosto do Manual">
+        <img src="SUMARIO.png" alt="Sumário do Manual">
+        <img src="P1.png" alt="Página 1 do Manual">
+        <img src="P2.png" alt="Página 2 do Manual">
+        <img src="P3.png" alt="Página 3 do Manual">
+        <img src="P4.png" alt="Página 4 do Manual">
+        <img src="P5.png" alt="Página 5 do Manual">
+        <img src="P6.png" alt="Página 6 do Manual">
+        <img src="P7.png" alt="Página 7 do Manual">
+        <img src="P8.png" alt="Página 8 do Manual">
+        <img src="P9.png" alt="Página 9 do Manual">
+        <img src="P10.png" alt="Página 10 do Manual">
+        <img src="P11.png" alt="Página 11 do Manual">
+      </div>
+    </div>
+  </section>
 
   <footer class="rodape">
     <div class="container">
@@ -80,36 +135,16 @@
       <form class="form-feedback">
         <label for="nome">Nome:</label><br>
         <input type="text" id="nome" name="nome" placeholder="Seu nome" style="width: 100%; max-width: 400px; padding: 10px;"><br><br>
+
         <label for="feedback">Feedback:</label><br>
         <textarea id="feedback" name="feedback" rows="4" placeholder="Digite seu feedback..." required style="width: 100%; max-width: 400px; padding: 10px;"></textarea><br><br>
+
         <button type="submit" style="padding: 10px 20px; cursor: pointer;">Enviar</button>
       </form>
       <p style="margin-top:20px;">&copy; 2025 IFRN.</p>
     </div>
   </footer>
-
-  <script>
-    function lerSite() {
-      window.speechSynthesis.cancel();
-      const elementos = document.querySelectorAll('h1, h2, .texto-secao p');
-      let textoCompleto = "";
-      elementos.forEach(el => textoCompleto += el.innerText + ". ");
-
-      const mensagem = new SpeechSynthesisUtterance(textoCompleto);
-      mensagem.lang = 'pt-BR';
-      mensagem.rate = 1.1;
-
-      mensagem.onstart = () => document.getElementById('btnParar').style.display = 'inline-block';
-      mensagem.onend = () => document.getElementById('btnParar').style.display = 'none';
-
-      window.speechSynthesis.speak(mensagem);
-    }
-
-    function pararLeitura() {
-      window.speechSynthesis.cancel();
-      document.getElementById('btnParar').style.display = 'none';
-    }
-  </script>
+  
 
 </body>
 </html>
