--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <a href="#inicio">Início</a>
   <a href="#baixa-visao">Baixa visão</a>
   <a href="#manual">Manual</a>
+  
 </nav>
   </header>
 
@@ -110,20 +111,20 @@
     <div class="container">
       <h2>MANUAL</h2>
       <div class="manual-imagens">
-        <img src="MANUAL CAPA.png" alt="Capa do Manual de Acessibilidade">
-        <img src="MANUAL ROST.png" alt="Folha de Rosto do Manual">
-        <img src="SUMARIO.png" alt="Sumário do Manual">
-        <img src="P1.png" alt="Página 1 do Manual">
-        <img src="P2.png" alt="Página 2 do Manual">
-        <img src="P3.png" alt="Página 3 do Manual">
-        <img src="P4.png" alt="Página 4 do Manual">
-        <img src="P5.png" alt="Página 5 do Manual">
-        <img src="P6.png" alt="Página 6 do Manual">
-        <img src="P7.png" alt="Página 7 do Manual">
-        <img src="P8.png" alt="Página 8 do Manual">
-        <img src="P9.png" alt="Página 9 do Manual">
-        <img src="P10.png" alt="Página 10 do Manual">
-        <img src="P11.png" alt="Página 11 do Manual">
+        <img src="MANUAL CAPA.jpg" alt="Capa do Manual de Acessibilidade">
+        <img src="MANUAL ROST.jpg" alt="Folha de Rosto do Manual">
+        <img src="SUMARIO.jpg" alt="Sumário do Manual">
+        <img src="P1.jpg" alt="Página 1 do Manual">
+        <img src="P2.jpg" alt="Página 2 do Manual">
+        <img src="P3.jpg" alt="Página 3 do Manual">
+        <img src="P4.jpg" alt="Página 4 do Manual">
+        <img src="P5.jpg" alt="Página 5 do Manual">
+        <img src="P6.jpg" alt="Página 6 do Manual">
+        <img src="P7.jpg" alt="Página 7 do Manual">
+        <img src="P8.jpg" alt="Página 8 do Manual">
+        <img src="P9.jpg" alt="Página 9 do Manual">
+        <img src="P10.jpg" alt="Página 10 do Manual">
+        <img src="P11.jpg" alt="Página 11 do Manual">
       </div>
     </div>
   </section>
@@ -146,4 +147,3 @@
 
 </body>
 </html>
-
