--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
     <div class="container">
       <h2>MANUAL</h2>
       <div class="manual-imagens">
+        <p>Este Manual te auxiliará em algumas funções do Sistema SUAP
+        caso esteja com dificuldade para ler clique [control +]</p>
         <img src="MANUAL CAPA.jpg" alt="Capa do Manual de Acessibilidade">
         <img src="MANUAL ROST.jpg" alt="Folha de Rosto do Manual">
         <img src="SUMARIO.jpg" alt="Sumário do Manual">
@@ -146,4 +148,5 @@
   </footer>
 
 </body>
+
 </html>
